@@ -280,23 +280,23 @@
         "Product"
         {
         "Name" = "8:Microsoft Visual Studio"
-        "ProductName" = "8:TWAIN 2.0 App Sample"
-        "ProductCode" = "8:{F39CD3C5-E90E-4EE5-A00A-94E7CAEAB875}"
-        "PackageCode" = "8:{314F7F1A-65A4-4B7F-A70C-52D49E9F3764}"
+        "ProductName" = "8:TWAIN 2.1 App Sample"
+        "ProductCode" = "8:{65FDD48E-1622-4581-9806-CFE13BDB5F1A}"
+        "PackageCode" = "8:{4218BF0E-8D18-4FF7-AD75-0338A1EA63C8}"
         "UpgradeCode" = "8:{3093BF18-1ADD-4A3C-AE32-8F818163DFAF}"
         "RestartWWWService" = "11:FALSE"
         "RemovePreviousVersions" = "11:TRUE"
         "DetectNewerInstalledVersion" = "11:TRUE"
         "InstallAllUsers" = "11:TRUE"
-        "ProductVersion" = "8:2.0.9"
+        "ProductVersion" = "8:2.1.1"
         "Manufacturer" = "8:TWAIN Working Group"
         "ARPHELPTELEPHONE" = "8:http://www.twainforum.org/"
         "ARPHELPLINK" = "8:http://sourceforge.net/projects/twain-samples/"
         "Title" = "8:App Installer 32"
         "Subject" = "8:"
         "ARPCONTACT" = "8:TWAIN Working Group"
-        "Keywords" = "8:TWAIN 2.0 App Sample"
-        "ARPCOMMENTS" = "8:Sample TWAIN 2.0 Application 32bit"
+        "Keywords" = "8:TWAIN 2.1 App Sample"
+        "ARPCOMMENTS" = "8:Sample TWAIN 2.1 Application 32bit"
         "ARPURLINFOABOUT" = "8:http://twain.org"
         "ARPPRODUCTICON" = "8:_08699E2E1EFE422DBB6F4BDE4BAEA4D5"
         "ARPIconIndex" = "3:0"
