@@ -396,23 +396,23 @@
         "Product"
         {
         "Name" = "8:Microsoft Visual Studio"
-        "ProductName" = "8:TWAIN 2.0 App Sample"
-        "ProductCode" = "8:{5422BFC9-551E-45B6-BDB3-5BE0C599F8C9}"
-        "PackageCode" = "8:{CE1D75C9-785A-4DFA-AAA8-C6062E6BABBF}"
+        "ProductName" = "8:TWAIN 2.1 App Sample"
+        "ProductCode" = "8:{E39CD443-EA09-4E36-847B-C1A0E5AE1171}"
+        "PackageCode" = "8:{33AB0029-EE56-41C0-B93F-330F4C5E0284}"
         "UpgradeCode" = "8:{2638B13B-6530-4442-A0A1-EBF207319E97}"
         "RestartWWWService" = "11:FALSE"
         "RemovePreviousVersions" = "11:TRUE"
         "DetectNewerInstalledVersion" = "11:TRUE"
         "InstallAllUsers" = "11:TRUE"
-        "ProductVersion" = "8:2.0.9"
+        "ProductVersion" = "8:2.1.1"
         "Manufacturer" = "8:TWAIN Working Group"
         "ARPHELPTELEPHONE" = "8:http://www.twainforum.org/"
         "ARPHELPLINK" = "8:http://sourceforge.net/projects/twain-samples/"
         "Title" = "8:App Installer 64"
         "Subject" = "8:"
         "ARPCONTACT" = "8:TWAIN Working Group"
-        "Keywords" = "8:TWAIN 2.0 App Sample"
-        "ARPCOMMENTS" = "8:Sample TWAIN 2.0 Application 32bit and 64bit"
+        "Keywords" = "8:TWAIN 2.1 App Sample"
+        "ARPCOMMENTS" = "8:Sample TWAIN 2.1 Application 32bit and 64bit"
         "ARPURLINFOABOUT" = "8:http://twain.org"
         "ARPPRODUCTICON" = "8:_5B6EB5FCCECA4AAA97BDF758779B4E0F"
         "ARPIconIndex" = "3:0"
