@@ -110,13 +110,14 @@ STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_VISIBLE | WS_CAPT
 CAPTION "TWAIN Configuration"
 FONT 8, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
-    DEFPUSHBUTTON   "Scan",IDB_SCAN,156,207,50,16,WS_GROUP
-    PUSHBUTTON      "Cancel",IDCANCEL,213,207,50,16,WS_GROUP
+    DEFPUSHBUTTON   "Scan",IDB_SCAN,97,207,50,16,WS_GROUP
+    PUSHBUTTON      "UI Only",IDB_UIONLY,155,207,50,16
+    PUSHBUTTON      "Cancel",IDCANCEL,213,207,50,16
     LTEXT           "",IDC_STC_DS,7,1,258,38
-    CONTROL         "",IDLC_CAPS,"SysListView32",LVS_REPORT | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | WS_BORDER | WS_GROUP | WS_TABSTOP,7,39,256,148
+    CONTROL         "",IDLC_CAPS,"SysListView32",LVS_REPORT | LVS_SINGLESEL | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | WS_BORDER | WS_GROUP | WS_TABSTOP,7,39,256,148
     PUSHBUTTON      "Path...",IDB_PATH,7,190,33,12,WS_DISABLED
     EDITTEXT        IDC_EDIT1,46,190,217,12,ES_AUTOHSCROLL | WS_DISABLED
-    CONTROL         "Show UI",IDC_SHOWUI,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,215,146,8
+    CONTROL         "Show UI",IDC_SHOWUI,"Button",BS_AUTOCHECKBOX | WS_GROUP | WS_TABSTOP,7,215,76,8
     LTEXT           "Image Info",IDC_STATIC,269,7,197,8
     EDITTEXT        IDC_IMAGEINFO,269,16,197,48,ES_MULTILINE | ES_AUTOVSCROLL | ES_AUTOHSCROLL | ES_READONLY | NOT WS_TABSTOP
     LTEXT           "Extended Image Info",IDC_STATIC,269,71,197,8
@@ -130,8 +131,8 @@ END
 //
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION 2,0,9,0
- PRODUCTVERSION 2,0,9,0
+ FILEVERSION 2,1,1,0
+ PRODUCTVERSION 2,1,1,0
  FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
  FILEFLAGS 0x1L
@@ -148,12 +149,12 @@ BEGIN
         BEGIN
             VALUE "CompanyName", "TWAIN Working Group"
             VALUE "FileDescription", "Sample TWAIN Application"
-            VALUE "FileVersion", "2.0.9.0"
+            VALUE "FileVersion", "2.1.1.0"
             VALUE "InternalName", "SampleApp.exe"
             VALUE "LegalCopyright", "(c) TWAIN Working Group.  All rights reserved."
             VALUE "OriginalFilename", "SampleApp.exe"
             VALUE "ProductName", "SampleApp"
-            VALUE "ProductVersion", "2.0.9.0"
+            VALUE "ProductVersion", "2.1.1.0"
         END
     END
     BLOCK "VarFileInfo"
